--- a/Ardoq_task1.ipynb
+++ b/Ardoq_task1.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "# Task 1\n",
-        "Create a function that, given a list of integers, returns the highest product between three of those numbers. For example, given the list [1, 10, 2, 6, 5, 3] the highest product would be 10 * 6 * 5 = 300.\n",
+        "Create a function that, given a list of integers, returns the highest product between three of those numbers. For example, given the list [1, 10, 2, 6, 5, 3] the highest product would be 10 \* 6 \* 5 = 300.\n",
         "\n",
         "I'm assuming that there will only be positive integers in the list in my solution. If it is of interest I can also write a function that takes into account that the list can contain negative integers, e.g. the product of two negative integers can be higher than the product of two positive integers."
       ]
